# rp2350-Touch-LCD-3.49-keyboad-mouse

./: CMakeLists.txt  README.md  main.c
.cache/clangd/index/: DEV_Config.c.91F371E43203F3B8.idx  DEV_Config.h.CA099135CFD40217.idx  ImageData.c.FB16AE6F183D1314.idx  LCD_3IN49.c.78D73E6A28BF94C7.idx  LCD_3IN49.h.8B4B3F45250CF859.idx  LCD_3in49_LVGL_test.c.1A1AC2C749734851.idx  LCD_test.h.D1BD359BDB9AC051.idx  LVGL_example.c.52FCEFF90AE62E73.idx  LVGL_example.h.A1DA47A52957B525.idx  PCF85063A.c.4FAAE1F7D43CD357.idx  PCF85063A.h.578651F9185E61B9.idx  QMI8658.c.A379EFB4975EF52F.idx  QMI8658.h.B00C0FC25AB35CBB.idx  Touch.c.B45042D4D032BADE.idx  Touch.h.F09776ACDE4D088F.idx  gifdec.c.DD9C4C1B638BA12B.idx  gifdec.h.42865E26F9EBD415.idx  hid_app.c.0DA842DA2E3D457D.idx  hid_app.h.706E63D15BD680A9.idx  lodepng.c.377252C7C01FDA96.idx  lodepng.h.2358092CFCD5A55F.idx  lv_anim.c.F3A0660D9150F442.idx  lv_anim.h.FF88870C678AE7EA.idx  lv_anim_timeline.c.8E1AC26D7EF21F33.idx  (+282 more)
examples/inc/: LCD_test.h  LVGL_example.h
examples/src/: ImageData.c  LCD_3in49_LVGL_test.c  LVGL_example.c
lib/LCD/: CMakeLists.txt  LCD_3IN49.c  LCD_3IN49.h
lib/PCF85063A/: CMakeLists.txt
lib/PSRAM/: CMakeLists.txt  psram_tool.c  psram_tool.h  rp_pico_alloc.c  rp_pico_alloc.h
lib/QSPI_PIO/: qspi.pio.h  qspi_pio.c
lib/Touch/: Touch.c  Touch.h
lib/USB_HID/: CMakeLists.txt  hid_app.c  hid_app.h  tusb_descriptors.c  usb_descriptors.c  usb_hid_keyboard.c  usb_hid_keyboard.h
oldCode/: CMakeLists.txt  main.c
oldCode/examples/: CMakeLists.txt
uf2/: RP2350-Touch-LCD-3.49-LVGL.uf2
(+3 files in other folders)
